--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.38"
 clap = { version = "4.5.17", features = ["derive"] }
-nix = { version = "0.29.0", features = ["sched"] }
+env_logger = "0.11.5"
+log = "0.4.22"
+nix = { version = "0.29.0", features = ["sched", "mount"] }
