--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ env_logger = "0.11.5"
 log = "0.4.22"
 cgroups-rs = "=0.3.4"
 clap = { version = "4.5.17", features = ["derive"] }
-nix = { version = "0.29.0", features = ["sched", "mount"] }
+nix = { version = "0.29.0", features = ["sched", "mount", "fs"] }
