--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ clap = { version = "4.5.17", features = ["derive"] }
 nix = { version = "0.29.0", features = ["sched", "mount", "fs"] }
 serde ={ version = "1.0.210", features = ["derive"] }
 rand = "0.8.5"
+lazy_static = "1.5.0"
