--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ nix = { version = "0.29.0", features = ["sched", "mount", "fs"] }
 serde ={ version = "1.0.210", features = ["derive"] }
 rand = "0.8.5"
 lazy_static = "1.5.0"
+tabwriter = "1.4.0"
