--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,11 @@ env_logger = "0.11.5"
 log = "0.4.22"
 cgroups-rs = "=0.3.4"
 serde_json = "1.0.128"
-clap = { version = "4.5.17", features = ["derive"] }
-nix = { version = "0.29.0", features = ["sched", "mount", "fs", "signal"] }
-serde ={ version = "1.0.210", features = ["derive"] }
 rand = "0.8.5"
 lazy_static = "1.5.0"
 tabwriter = "1.4.0"
+async-std = "1.13.0"
+
+clap = { version = "4.5.17", features = ["derive"] }
+nix = { version = "0.29.0", features = ["sched", "mount", "fs", "signal"] }
+serde ={ version = "1.0.210", features = ["derive"] }
