--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,5 @@ tabwriter = "1.4.0"
 async-std = "1.13.0"
 
 clap = { version = "4.5.17", features = ["derive"] }
-nix = { version = "0.29.0", features = ["sched", "mount", "fs", "signal"] }
+nix = { version = "0.29.0", features = ["sched", "mount", "fs", "signal", "term"] }
 serde ={ version = "1.0.210", features = ["derive"] }
