--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ serde_json = "1.0.128"
 rand = "0.8.5"
 lazy_static = "1.5.0"
 tabwriter = "1.4.0"
-async-std = "1.13.0"
 
 clap = { version = "4.5.17", features = ["derive"] }
 nix = { version = "0.29.0", features = ["sched", "mount", "fs", "signal", "term"] }
 serde ={ version = "1.0.210", features = ["derive"] }
+tokio = { version = "1.42.0", features = ["full"] }
