--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,21 @@ edition = "2021"
 env_logger = "0.11.5"
 log = "0.4.22"
 cgroups-rs = "=0.3.4"
-serde_json = "1.0.128"
 rand = "0.8.5"
 lazy_static = "1.5.0"
 tabwriter = "1.4.0"
+bincode = "1.3.3"
+anyhow = "1.0.95"
+thiserror = "2.0.11"
 
 clap = { version = "4.5.17", features = ["derive"] }
-nix = { version = "0.29.0", features = ["sched", "mount", "fs", "signal", "term"] }
-serde ={ version = "1.0.210", features = ["derive"] }
+nix = { version = "0.29.0", features = [
+    "sched",
+    "mount",
+    "fs",
+    "signal",
+    "term",
+] }
+serde = { version = "1.0.210", features = ["derive"] }
 tokio = { version = "1.42.0", features = ["full"] }
+dashmap = { version = "6.1.0", features = ["serde"] }
