--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ env_logger = "0.11.5"
 log = "0.4.22"
 cgroups-rs = "=0.3.4"
 rand = "0.8.5"
-once_cell = "1.20.2"
 tabwriter = "1.4.0"
 bincode = "1.3.3"
 anyhow = "1.0.95"
@@ -16,11 +15,12 @@ anyhow = "1.0.95"
 clap = { version = "4.5.17", features = ["derive"] }
 nix = { version = "0.29.0", features = [
     "sched",
+    "signal",
     "mount",
     "fs",
-    "signal",
     "term",
 ] }
 serde = { version = "1.0.210", features = ["derive"] }
-tokio = { version = "1.42.0", features = ["full"] }
+tokio = { version = "1.42.0", features = ["full", "tracing"] }
 dashmap = { version = "6.1.0", features = ["serde"] }
+console-subscriber = "0.4.1"
