--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,11 @@ rand = "0.8.5"
 tabwriter = "1.4.0"
 bincode = "1.3.3"
 anyhow = "1.0.95"
+bitvec = "1.0.1"
+rtnetlink = "0.14.1"
+netlink-packet-route = "0.19.0"
+futures = "0.3.31"
+console-subscriber = "0.4.1"
 
 clap = { version = "4.5.17", features = ["derive"] }
 nix = { version = "0.29.0", features = [
@@ -23,4 +28,3 @@ nix = { version = "0.29.0", features = [
 serde = { version = "1.0.210", features = ["derive"] }
 tokio = { version = "1.42.0", features = ["full", "tracing"] }
 dashmap = { version = "6.1.0", features = ["serde"] }
-console-subscriber = "0.4.1"
