--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,10 @@ nix = { version = "0.29.0", features = [
 serde = { version = "1.0.210", features = ["derive"] }
 tokio = { version = "1.42.0", features = ["full", "tracing"] }
 dashmap = { version = "6.1.0", features = ["serde"] }
+
+[dev-dependencies]
+tokio-test = "0.4"
+tempfile = "3.8"
+mockall = "0.12"
+rstest = "0.18"
+pretty_assertions = "1.4"
